Social Buttons off-center Fixes #2

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -123,3 +123,7 @@ $secondary: #303030;
   width: 36px;
   height: 36px;
 }
+
+.social-icon::before {
+  transform: translateX(-3px);
+}
